# ASE---Multi-Room-Monitoring-Agent

./: .gitignore  README.md  index.html
Circuit_Test/: CMakeLists.txt
Circuit_Test/main/: CMakeLists.txt  hello_world_main.c
Multi_Room_Monitoring_Agent/: CMakeLists.txt  partitions.csv
Multi_Room_Monitoring_Agent/Circuit_Test/: CMakeLists.txt
Multi_Room_Monitoring_Agent/Circuit_Test/main/: hello_world_main.c
Multi_Room_Monitoring_Agent/main/: CMakeLists.txt  Kconfig.projbuild  main.c  shared_data.h
Multi_Room_Monitoring_Agent/main/tasks/: display_task.c  display_task.h  mqtt_task.c  mqtt_task.h  sd_task.c  sd_task.h  sensor_task.c  sensor_task.h
